webook/webook-mysql-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          # 对于mysql，这是必要的，不然pod不能正常启动
          imagePullPolicy: IfNotPresent
          volumeMounts:
            # 这里必须对应到容器的数据存储的位置，不然就算挂上了pvc和pv，还是不能数据存储持久化
            # mysql: /var/lib/mysql
            - mountPath: /var/lib/mysql
              name: mysql-storage
          ports:
            - containerPort: 3306
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
