webook/webook-redis-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-redis
  template:
    metadata:
      labels:
        app: webook-redis
    spec:
      containers:
        - name: webook-redis
          image: redis:latest
      restartPolicy: Always
