webook/webook-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer
  selector:
      app: webook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
