webook/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  type: LoadBalancer
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 6380
      targetPort: 6379
